fixv1 subtitle overflow

--- a/backend/seeds/static/seeds/styles.css
+++ b/backend/seeds/static/seeds/styles.css
@@ -58,12 +58,13 @@ body {
 }
 
 #welcome {
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     gap: 1rem;
+    overflow: hidden;
 }
 
 #demo {
@@ -71,8 +72,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* height: 68vh; */
-    width: 90%;
+    width: 80%;
 }
 
 #demo iframe {
